[project]
name = "aoc2025"
version = "0.0.1"
authors = [
    { name = "Jeffrey Edwin Seifried", email = "jeffrey.seifried@gmail.com" }
]
requires-python = ">=3.14"
dependencies = ["more_itertools"]

[dependency-groups]
dev = ["pre-commit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
